objects/Lead_to_Case_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Case_field_API_Name__c</fullName>
        <label>Case field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Field_API_Name__c</fullName>
        <label>Lead Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead to Case Mapping</label>
</CustomObject>